--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html id="nobadak">
   <head>
     <meta charset="utf-8">
-    <title>new-project</title>
+    <title>Family-Home</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="body"style="
@@ -24,14 +24,14 @@
       이곳은 진우네 가족의 홈페이지 입니다..<br>
     </h3>
     <div id="image"><img src="projecting.jpg"width="100%" ></div>
-    <div align="center"><img src="fun.png" height="200px" style="padding-left:10%" >
-      <p><br>재미는 재미있는 동영상을 제공함으로써,<br>
+   <div align="center"><img src="mainfun.png" height="200px" style="padding-left:150px" >
+      <div style="background-color:pink;"> <p><br>재미는 재미있는 동영상을 제공함으로써,<br>
        여러분에게 보다 즐거운 시간을 가질 수 있도록하는 것이
        바로 이 재미서비스의 목표이면서 동시에 지향입니다.
        여러분이 이 제미 서비스를  더욱더 재미있게 만들기 위해서는
         이 재미 서비스에 필요한 것들을 문의해 주시면 감사하겠습니다.
         앞으로도 더욱더 재미있는 서비스가 되도록 하겠습니다.
-        <br style="text-align:center">감사힙니다.</p>
+        <br style="text-align:center">감사힙니다.</p></div>
       <!--<div style="text-align:center;background-color:pink"><h3>서비스 일시중지 관련 안내문</h3>
         <br>그 동안 서비스를 애용해 주신 분들께 죄송합니다.
         <br>재미(beta) 서비스가 일시적인 종료 되었습니다.
@@ -40,7 +40,7 @@
         <br> 감사합니다.</div>
         <div style="text-align:right;background-color:pink"><br>-웹페이지 제작진 일동-</div>
 -->
-<a href="service5.html"><input type="button" value="바로보기" ></a></div>
+<a href="service5.html"><img src="Play.png" ></a></div>
     <div id="line">
       방문해 주신 여러분께 감사드립니다. <br>
 
