--- a/service2.html
+++ b/service2.html
@@ -2,7 +2,7 @@
 <html id="nobadak">
   <head>
     <meta charset="utf-8">
-    <title>new-project</title>
+    <title>박준호의 홈</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="body"style="
@@ -26,12 +26,33 @@
       <h3>골프동영상</h3>
       골프동영상 youtube으로 보기<br>
       아래의 링크를 클릭해주세요:)<br>
-      <a href="https://www.youtube.com/results?search_query=%EA%B3%A8%ED%94%84" style="text-decoration:none;font-size:24pt" target="_blank">골프동영상보기-></a>
+      <a href="https://www.youtube.com/results?search_query=%EA%B3%A8%ED%94%84" style="text-decoration:none;font-size:24pt" target="_blank">골프동영상보기--></a>
       <!--<div id="media">
         <div id="media1"><h4>골프동영상</h4><br><iframe width="500" height="315" src="https://www.youtube.com/results?search_query=%EA%B3%A8%ED%94%84" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
--->      <br><br><br><br><br><br><br><br><br><br>
+-->      <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://family-home.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+<br><br><br><br><br><br><br><br><br><br>
       <br><br><br><br><br><br>
         </div>
       </div>
