--- a/service3.html
+++ b/service3.html
@@ -26,8 +26,33 @@
   안녕하세요 여기는 박진우의 홈입니다.
   <br><strong><div style="font-size:30pt">step1.매일국어하기</strong><br></div>
     <a href="http://www.dailykor.com/" target="_blank" style="text-decoration:none;background-color:#15a7e8;font-size:24pt;color:white;font-family:sans-serif">GO!!</a>
+    <iframe id="Dic" src="http://124.137.201.223/iframe/KoreanDic.jsp?color=brown" width="***px" height="60px" border="0" frameborder="0" scrolling="no" topmargin="0" leftmargin="0"></iframe>
+
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://family-home.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br>
+
+
     <div id="line">
       방문해 주신 여러분께 감사드립니다. <br>
 
