--- a/service5.html
+++ b/service5.html
@@ -21,36 +21,36 @@
     margin-bottom: 0px;">
       <div id="login"><h4>로그인하기</h4></div>
       <h1><a href="project.html" style="text-decoration:none"style="text-color:black">우리가족의 웹사이트</a></h1>
-    <div id="top">
+      <div id="top">
         <h2><a href="service1.html" style="text-decoration:none"style="text-color:black" >김선영</a></h2>
         <h2><a href="service2.html" style="text-decoration:none"style="text-color:black" >박준호</a></h2>
         <h2><a href="service3.html" style="text-decoration:none"style="text-color:black" >박진우</a></h2>
         <h2><a href="service4.html" style="text-decoration:none"style="text-color:black" >박지원</a></h2>
         <h2><a href="service5.html" style="text-color:black" ><!--<img src="mainfun.png" height="40px">--><strong>재미</strong>(beta)</a></h2>
-    </div>
+      </div>
 
       <div align="center"><img src="fun.png" height="200px" style="padding-left:10%" > <!--<div id="service"><u><strong>재미<div id="beta">beta</div></strong></u></div>-->
-    </div>
-
-
-    <div id="jemititle"><h3>lava</h3>
-    라바는 귀여운(?) 두 애벌래와 친구들이 하수구에서 펼치는 재미있는 이야기 입니다.
-    <br>앞으로도 계속 영상이 업로드 될 예정입니다!</div>
-    <div id="media">
-      <div id="media1"><h4>시즌 1 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/t5nQLyoPB54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-    </div>
-    <div id="jemititle">
-      <h3>PINKPONG</h3><br>
-      핑크퐁은 어린이들을 위한 동영상입니다.
-      <br>앞으로도 계속 영상이 업로드 될 예정입니다!<br></div>
-      <div id="media">
-        <div id="media1"><h4>핑크퐁 모두 보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/dBD54EZIrZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+      <div id="jemititle"><h3>lava</h3>
+        라바는 귀여운(?) 두 애벌래와 친구들이 하수구에서 펼치는 재미있는 이야기 입니다.
+        <br>앞으로도 계속 영상이 업로드 될 예정입니다!</div>
+        <div id="media">
+          <div id="media1"><h4>시즌 1 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/t5nQLyoPB54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
+        <div id="jemititle">
+          <h3>PINKPONG</h3><br>
+          핑크퐁은 어린이들을 위한 동영상입니다.
+          <br>앞으로도 계속 영상이 업로드 될 예정입니다!<br></div>
+      <div id="media">
+        <div id="media1"><h4>핑크퐁 인기동요 80분 재생</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/dBD54EZIrZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!--</div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        --></div>
     </div>
   </div>
     <!--<div style="text-align:center;background-color:pink"><h3>서비스 일시중지 관련 안내문</h3>
@@ -60,19 +60,42 @@
       <br> 많은 양해 부탁드립니다.
       <br> 감사합니다.</div>
       <div style="text-align:right;background-color:pink"><br>-웹페이지 제작진 일동-</div>
-    --><br><br><br><br><br><br><br><br><br><br>
-      <br><br><br><br><br><br><br><br><br><br>
-    <div id="line">
-      방문해 주신 여러분께 감사드립니다. <br>
+    -->
+    <div id="disqus_thread"></div>
+    <script>
 
-      개발자:박진우<br>
-      <!--<h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>-->
-      <div style="text-align:center;">©2018 박진우</div>
-    </div>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://family-home.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br><br>
+     <div id="line">
+       방문해 주신 여러분께 감사드립니다. <br>
+
+        개발자:박진우<br>
+        <!--<h2>개발자:박진우</h2>
+        <h2>개발자:박진우</h2>
+        <h2>개발자:박진우</h2>
+        <h2>개발자:박진우</h2>
+        <h2>개발자:박진우</h2>-->
+        <div style="text-align:center;">
+          ©2019 박진우
+        </div>
+     </div>
 
   </body>
 </html>
