--- a/service2.html
+++ b/service2.html
@@ -31,27 +31,27 @@
         <div id="media1"><h4>골프동영상</h4><br><iframe width="500" height="315" src="https://www.youtube.com/results?search_query=%EA%B3%A8%ED%94%84" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><div id="media1"><h4>시즌 2 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/_zXTiZQi0_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
--->      <div id="disqus_thread"></div>
-<script>
+-->      <!-- 라이브리 시티 설치 코드 -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
+	<script type="text/javascript">
+  window.livereOptions ={
+    refer:'jinwoob1.github.io/familywebsite/project.html'
+  };
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://family-home.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+       if (typeof LivereTower === 'function') { return; }
 
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+</div>
+<!-- 시티 설치 코드 끝 -->
 <br><br><br><br><br><br><br><br><br><br>
       <br><br><br><br><br><br>
         </div>
