--- a/service4.html
+++ b/service4.html
@@ -42,6 +42,7 @@
 <div id="table">  <table>
 
 <thead>
+  <!-- WARNING: F5 누를시 초기화가 됩니다....-->
   <tr>
     <th>시간</th>
     <th>숙제,공부</th>
@@ -329,7 +330,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
 	<script type="text/javascript">
   window.livereOptions ={
-    refer:'jinwoob1.github.io/familywebsite/project.html'
+    refer:'jinwoob1.github.io/familywebsite/service4.html'
   };
    (function(d, s) {
        var j, e = d.getElementsByTagName(s)[0];
