--- a/service4.html
+++ b/service4.html
@@ -25,11 +25,13 @@
   --><p> <div id="service"><u><strong>박지원</strong></u></div>
     <div id="memo">
       <b><h3> 매모 (필요한 것.)</h3></b>
-    <ol>
+    <ul>
       <li><a href="http://www.dailykor.com/" target="_blank">매일국어(www.dailykor.com)</a></li>
       <li><a href="http://www.havenglish.com/" target="_blank">해브잉글리쉬(www.havenglish.com)</a></li>
       <li><a href="https://endic.naver.com/?sLn=kr" target="_blank">영어사전(네이버 사전)</a></li>
-    </ol>
+<li><a href="https://www.youtube.com/results?search_query=%EC%B5%9C%EC%83%81%EC%9C%84+%EC%88%98%ED%95%99+%EB%94%94%EB%94%A4%EB%8F%8C4-1" target="_blank">최상위 디딤돌 수학 4-1 해설</a></li>
+<li><a href="https://aoa.matholic.com/app/page/#/course" target="_blank">매쓰홀릭 학습실</a></li>
+</ul>
   </div>
 
   MEMO
