--- a/project.html
+++ b/project.html
@@ -23,13 +23,13 @@
 
     </div>
       <div id="login"><h4>로그인하기</h4></div>
-      <h1><a href="project.html" style="text-decoration:none"style="text-color:black">우리가족의 웹사이트</a></h1>
+      <h1><a href="project.html" style="text-decoration:none"style="color:black">우리가족의 웹사이트</a></h1>
     <div id="top">
-        <h2><a href="service1.html" style="text-decoration:none"style="text-color:black" >김선영</a></h2>
-        <h2><a href="service2.html" style="text-decoration:none"style="text-color:black" >박준호</a></h2>
-        <h2><a href="service3.html" style="text-decoration:none"style="text-color:black" >박진우</a></h2>
-        <h2><a href="service4.html" style="text-decoration:none"style="text-color:black" >박지원</a></h2>
-        <span><h2><a href="service5.html" style="text-decoration:none"style="text-color:black" ><strong>재미</strong>(beta) </div></a></h2>
+        <h2><a href="service1.html" style="text-decoration:none"style="color:black" >김선영</a></h2>
+        <h2><a href="service2.html" style="text-decoration:none"style="color:black" >박준호</a></h2>
+        <h2><a href="service3.html" style="text-decoration:none"style="color:black" >박진우</a></h2>
+        <h2><a href="service4.html" style="text-decoration:none"style="color:black" >박지원</a></h2>
+        <span><h2><a href="service5.html" style="text-decoration:none"style="color:black" ><strong>재미</strong>(beta) </div></a></h2>
     </span></div>
     <!-- pop up 창 띄우기-->
     <body onload="window.open('popup.html','','width=400px, height=570px, left=10px, top=10px, toolbar=0, status=yes, menubars=0, scrollbars=0, resizable=0, location=0, directories=0')">
