--- a/service1.html
+++ b/service1.html
@@ -2,7 +2,7 @@
 <html id="nobadak">
   <head>
     <meta charset="utf-8">
-    <title>new-project</title>
+    <title>김선영의 홈</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="body"style="
@@ -44,7 +44,7 @@
       <div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
       	<script type="text/javascript">
         window.livereOptions ={
-          refer:'jinwoob1.github.io/familywebsite/service1.html'
+          refer:'jinwoob1.github.io/familywebsite/service1/2019-04'
         };
          (function(d, s) {
              var j, e = d.getElementsByTagName(s)[0];
