--- a/service3.html
+++ b/service3.html
@@ -2,7 +2,7 @@
 <html id="nobadak">
   <head>
     <meta charset="utf-8">
-    <title>new-project</title>
+    <title>박진우의 홈</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="body"style="
@@ -34,13 +34,13 @@
 <canvas id="canvas" width="300" height="300"></canvas>
     <div class="countdown" id="countdown1">
       <span class="timeel days">00</span>
-      <span class="timeel timeRefDays">days</span>
+      <span class="timeel timeRefDays">일</span>
       <span class="timeel hours">00</span>
-      <span class="timeel timeRefHours">hours</span>
+      <span class="timeel timeRefHours">시</span>
       <span class="timeel minutes">00</span>
-      <span class="timeel timeRefMinutes">minutes</span>
+      <span class="timeel timeRefMinutes">분</span>
       <span class="timeel seconds">00</span>
-      <span class="timeel timeRefSeconds">seconds</span>
+      <span class="timeel timeRefSeconds">초</span>
     </div>
 
     <script type="text/javascript">
@@ -51,7 +51,7 @@
     */
     window.onload = function() {
       // Month Day, Year Hour:Minute:Second, id-of-element-container
-      countDownToTime("Apr 30, 2019 12:00:00", 'countdown1'); // ****** Change this line!
+      countDownToTime("Apr 30, 2019 24:00:00", 'countdown1'); // ****** Change this line!
     }
     function countDownToTime(countTo, id) {
       countTo = new Date(countTo).getTime();
@@ -127,7 +127,7 @@
     <div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
     	<script type="text/javascript">
       window.livereOptions ={
-        refer:'jinwoob1.github.io/familywebsite/service3.html'
+        refer:'jinwoob1.github.io/familywebsite/service3/2019-04'
       };
        (function(d, s) {
            var j, e = d.getElementsByTagName(s)[0];
