--- a/service2.html
+++ b/service2.html
@@ -49,7 +49,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
 	<script type="text/javascript">
   window.livereOptions ={
-    refer:'jinwoob1.github.io/familywebsite/service2.html'
+    refer:'jinwoob1.github.io/familywebsite/service2/2019-04'
   };
    (function(d, s) {
        var j, e = d.getElementsByTagName(s)[0];
