--- a/service3.html
+++ b/service3.html
@@ -24,14 +24,12 @@
     <img src="projecting.jpg"width="100%" >
   --><p> <div id="service"><u><strong>박진우</strong></u></div>
   안녕하세요 여기는 박진우의 홈입니다.
-  <br><strong><div style="font-size:30pt">step1.매일국어하기</strong><br></div>
+  <!--<br><strong><div style="font-size:30pt">step1.매일국어하기</strong><br></div>
     <a href="http://www.dailykor.com/" target="_blank" style="text-decoration:none;background-color:#15a7e8;font-size:24pt;color:white;font-family:sans-serif">GO!!</a>
     <iframe id="Dic" src="http://124.137.201.223/iframe/KoreanDic.jsp?color=brown" width="***px" height="60px" border="0" frameborder="0" scrolling="no" topmargin="0" leftmargin="0"></iframe>
-
-
-
-
-<canvas id="canvas" width="300" height="300"></canvas>
+-->
+<!-- NOTE:이제 부터는 타이머임. -->
+<h2>댓글 삭제 까지 남은 기간:</h2>
     <div class="countdown" id="countdown1">
       <span class="timeel days">00</span>
       <span class="timeel timeRefDays">일</span>
