--- a/service5.html
+++ b/service5.html
@@ -29,6 +29,24 @@
         <h2><a href="service5.html" style="text-color:black" ><!--<img src="mainfun.png" height="40px">--><strong>재미</strong>(beta)</a></h2>
       </div>
 
+      <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
+
+      <h3>
+        <input type="button" value="야간모드 Night" style="width:435px;height:25px;text-align:center;font-size:15px;background-color:white;color:black" onclick="
+        var target = document.querySelector('body')
+         if (this.value === '야간모드 Night'){
+         target.style.color = 'white'
+         target.style.backgroundColor = 'black'
+         this.value = '주간모드 Day'
+         this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: black ; color: white'
+       }
+         else {
+         target.style.backgroundColor = 'white'
+         target.style.color = 'black'
+         this.value = '야간모드 Night'
+         this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: white ; color: black'
+       }">
+      </h3>
       <div align="center"><img src="fun.png" height="200px" style="padding-left:10%" > <!--<div id="service"><u><strong>재미<div id="beta">beta</div></strong></u></div>-->
       </div>
 
