--- a/project.html
+++ b/project.html
@@ -31,9 +31,28 @@
         <h2><a href="service4.html" style="text-decoration:none"style="color:black" >박지원</a></h2>
         <span><h2><a href="service5.html" style="text-decoration:none"style="color:black" ><strong>재미</strong>(beta) </div></a></h2>
     </span></div>
-    <!-- pop up 창 띄우기-->
-    <body onload="window.open('popup.html','','width=400px, height=570px, left=10px, top=10px, toolbar=0, status=yes, menubars=0, scrollbars=0, resizable=0, location=0, directories=0')">
 
+    <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
+
+    <h3>
+      <input type="button" value="야간모드 Night" style="width:435px;height:25px;text-align:center;font-size:15px;background-color:white;color:black" onclick="
+      var target = document.querySelector('body')
+       if (this.value === '야간모드 Night'){
+       target.style.color = 'white'
+       target.style.backgroundColor = 'black'
+       this.value = '주간모드 Day'
+       this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: black ; color: white'
+     }
+       else {
+       target.style.backgroundColor = 'white'
+       target.style.color = 'black'
+       this.value = '야간모드 Night'
+       this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: white ; color: black'
+     }">
+    </h3>
+    <!-- pop up 창 띄우기-->
+    <!--<body onload="window.open('popup.html','','width=400px, height=570px, left=10px, top=10px, toolbar=0, status=yes, menubars=0, scrollbars=0, resizable=0, location=0, directories=0')">
+-->
   <h3>
       안녕하세요,<br>
       이곳은 진우네 가족의 홈페이지 입니다..<br>
@@ -41,20 +60,7 @@
     <div class="border">
     <div id="image"><img src="projecting.jpg"width="100%" ></div>
    <div align="center"><img src="mainfun.png" height="200px" style="padding-left:150px" >
-      <!--div style="background-color:pink;"> <p><br>재미는 재미있는 동영상을 제공함으로써,<br>
-       여러분에게 보다 즐거운 시간을 가질 수 있도록하는 것이
-       바로 이 재미서비스의 목표이면서 동시에 지향입니다.
-       여러분이 이 제미 서비스를  더욱더 재미있게 만들기 위해서는
-        이 재미 서비스에 필요한 것들을 문의해 주시면 감사하겠습니다.
-        앞으로도 더욱더 재미있는 서비스가 되도록 하겠습니다.
-        <br style="text-align:center">감사힙니다.</p></div>
-      --><!--<div style="text-align:center;background-color:pink"><h3>서비스 일시중지 관련 안내문</h3>
-        <br>그 동안 서비스를 애용해 주신 분들께 죄송합니다.
-        <br>재미(beta) 서비스가 일시적인 종료 되었습니다.
-        <br> 더 나은 서비스로 찾아 뵙도록 하겠습니다.
-        <br> 많은 양해 부탁드립니다.
-        <br> 감사합니다.</div>
-        <div style="text-align:right;background-color:pink"><br>-웹페이지 제작진 일동-</div>
+
 -->
 <a href="service5.html"><img src="Play.png"></a></div>
 
@@ -108,17 +114,8 @@ s0.parentNode.insertBefore(s1,s0);
 <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
 </div>
 <!-- 시티 설치 코드 끝 -->
-    <div id="line">
-      방문해 주신 여러분께 감사드립니다. <br>
+    <link  rel="license" href="bottom.html">
 
-      개발자:박진우<br>
-      <!--<h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>
-      <h2>개발자:박진우</h2>-->
-      <div style="text-align:center">©2018 박진우</div>
-    </div>
 
   </body>
 </html>
