--- a/service1.html
+++ b/service1.html
@@ -19,6 +19,24 @@
         <h2><a href="service4.html" style="text-decoration:none"style="text-color:black" >박지원</a></h2>
         <h2><a href="service5.html" style="text-decoration:none"style="text-color:black" ><strong>재미</strong>(beta)</a></h2>
     </div>
+    <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
+
+    <h3>
+      <input type="button" value="야간모드 Night" style="width:435px;height:25px;text-align:center;font-size:15px;background-color:white;color:black" onclick="
+      var target = document.querySelector('body')
+       if (this.value === '야간모드 Night'){
+       target.style.color = 'white'
+       target.style.backgroundColor = 'black'
+       this.value = '주간모드 Day'
+       this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: black ; color: white'
+     }
+       else {
+       target.style.backgroundColor = 'white'
+       target.style.color = 'black'
+       this.value = '야간모드 Night'
+       this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: white ; color: black'
+     }">
+   </h3>
     <!--<h3>안녕하세요,<br>
       이곳은 새로운 프로젝트를 시작하는 웹페이지 입니다.</h3>
     <img src="projecting.jpg"width="100%" >-->
