--- a/service5.html
+++ b/service5.html
@@ -29,24 +29,6 @@
         <h2><a href="service5.html" style="text-color:black" ><!--<img src="mainfun.png" height="40px">--><strong>재미</strong>(beta)</a></h2>
       </div>
 
-      <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
-
-      <h3>
-        <input type="button" value="야간모드 Night" style="width:435px;height:25px;text-align:center;font-size:15px;background-color:white;color:black" onclick="
-        var target = document.querySelector('body')
-         if (this.value === '야간모드 Night'){
-         target.style.color = 'white'
-         target.style.backgroundColor = 'black'
-         this.value = '주간모드 Day'
-         this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: black ; color: white'
-       }
-         else {
-         target.style.backgroundColor = 'white'
-         target.style.color = 'black'
-         this.value = '야간모드 Night'
-         this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: white ; color: black'
-       }">
-      </h3>
       <div align="center"><img src="fun.png" height="200px" style="padding-left:10%" > <!--<div id="service"><u><strong>재미<div id="beta">beta</div></strong></u></div>-->
       </div>
 
@@ -70,6 +52,16 @@
         </div><div id="media1"><h4>시즌 3 모두보기</h4><br><iframe width="500" height="315" src="https://www.youtube.com/embed/94LNZwX4gQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         --></div>
     </div>
+    <div id="jemititle"><h3>자이언트펭TV</h3>
+      재밌게 봤으면 구독!!하면 펭수가 좋아하겠죠?
+    </div>
+    <div id="media">
+      <div id="media1">
+        <h4>[펭TV] EBS 연습생 펭수 유튜브 데뷔💜 머랭쿠키 먹방</h4><br><iframe width="560" height="315" src="https://www.youtube.com/embed/XeH_8w4AWS4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h4>'EBS 연습생 펭귄, 방송국 점거??' [자이언트 펭TV] teaser.1</h4><br><iframe width="560" height="315" src="https://www.youtube.com/embed/4vkzT47_Vdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      </div>
+    </div> <button type="button" name="펭수보러가기!!"><a href="https://www.youtube.com/channel/UCtckgmUcpzqGnzcs7xEqMzQ/featured"></a> </button>
   </div>
     <!--<div style="text-align:center;background-color:pink"><h3>서비스 일시중지 관련 안내문</h3>
       <br>그 동안 서비스를 애용해 주신 분들께 죄송합니다.
