--- a/service5.html
+++ b/service5.html
@@ -61,7 +61,7 @@
         <h4>'EBS 연습생 펭귄, 방송국 점거??' [자이언트 펭TV] teaser.1</h4><br><iframe width="560" height="315" src="https://www.youtube.com/embed/4vkzT47_Vdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       </div>
-    </div> <button type="button" name="펭수보러가기!!"><a href="https://www.youtube.com/channel/UCtckgmUcpzqGnzcs7xEqMzQ/featured">펭수 보러가기!</a> </button>
+    </div> <a href="https://www.youtube.com/channel/UCtckgmUcpzqGnzcs7xEqMzQ/featured"><button type="button" name="펭수보러가기!!">펭수 보러가기!</a> </button>
   </div>
     <!--<div style="text-align:center;background-color:pink"><h3>서비스 일시중지 관련 안내문</h3>
       <br>그 동안 서비스를 애용해 주신 분들께 죄송합니다.
