--- a/service4.html
+++ b/service4.html
@@ -82,10 +82,10 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 <!-- 라이브리 시티 설치 코드 -->
 <div id="lv-container" data-id="city" data-uid="MTAyMC80MjUyNy8xOTA3NA==">
-	<script type="text/javascript">
-  window.livereOptions ={
-    refer:'jinwoob1.github.io/familywebsite/service4/2019-04'
-  };
+<script type="text/javascript">
+	window.livereOptions = {
+		refer: '/service4.html'
+	};
    (function(d, s) {
        var j, e = d.getElementsByTagName(s)[0];
 
@@ -97,9 +97,9 @@ s0.parentNode.insertBefore(s1,s0);
 
        e.parentNode.insertBefore(j, e);
    })(document, 'script');
-	</script>
-<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
-<iframe src="./service4_files/get-uuid.html" title="livere-uuid" id="livere-uuid" style="display: none;"></iframe><iframe title="livere" scrolling="no" frameborder="0" src="./service4_files/city.html" id="lv-comment-989" style="min-width: 100%; width: 100px; height: 1094px; overflow: hidden; border: 0px; z-index: 124212;"></iframe></div>
+</script>
+<noscript>라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+</div>
 <!-- 시티 설치 코드 끝 -->
     <div id="line">
       방문해 주신 여러분께 감사드립니다. <br>
