--- a/service4.html
+++ b/service4.html
@@ -5,7 +5,21 @@
     <title>박지원의 홈</title>
     <link rel="stylesheet" href="style.css">
   <link type="text/css" rel="stylesheet" href="chrome-extension://eobejphpabbjeehffmbiecckpkggpbai/style.css"><script type="text/javascript" charset="utf-8" src="chrome-extension://eobejphpabbjeehffmbiecckpkggpbai/js/content-script/page_context.js"></script><link id="avast_os_ext_custom_font" href="chrome-extension://eofcbnmajmjmplflapaojjnihcjkigck/common/ui/fonts/fonts.css" rel="stylesheet" type="text/css"><style type="text/css">@keyframes tawkMaxOpen{0%{opacity:0;transform:translate(0, 30px);;}to{opacity:1;transform:translate(0, 0px);}}@-moz-keyframes tawkMaxOpen{0%{opacity:0;transform:translate(0, 30px);;}to{opacity:1;transform:translate(0, 0px);}}@-webkit-keyframes tawkMaxOpen{0%{opacity:0;transform:translate(0, 30px);;}to{opacity:1;transform:translate(0, 0px);}}#AQjK1Qk-1550494280055{outline:none!important;visibility:visible!important;resize:none!important;box-shadow:none!important;overflow:visible!important;background:none!important;opacity:1!important;filter:alpha(opacity=100)!important;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity1)!important;-moz-opacity:1!important;-khtml-opacity:1!important;top:auto!important;right:10px!important;bottom:90px!important;left:auto!important;position:fixed!important;border:0!important;min-height:0!important;min-width:0!important;max-height:none!important;max-width:none!important;padding:0!important;margin:0!important;-moz-transition-property:none!important;-webkit-transition-property:none!important;-o-transition-property:none!important;transition-property:none!important;transform:none!important;-webkit-transform:none!important;-ms-transform:none!important;width:auto!important;height:auto!important;display:none!important;z-index:2000000000!important;background-color:transparent!important;cursor:auto!important;float:none!important;border-radius:unset!important;}#WYOlTOc-1550494280056.open{animation : tawkMaxOpen .25s ease!important;}</style></head>
-  <body id="body" style="
+  <!-- 라이브리 프로퍼티 설정-->
+	<!--SNS에 포스팅 될 설명-->
+	<meta property="og:description"content="디스크립션 입력"/>
+	
+	<!--SNS에 프스팅 될 사이트 URL-->
+	<meta property="og:site"content="설치되는 페이지 URL"/>
+	
+	<!--SNS에 프스팅 될 썸네일 이미지-->
+	<meta property="og:image"content="썸네일 이미지 절대 경로"/>
+	
+	<!--SNS 포스팅 될 타이틀 값-->
+	<meta property="og:title"content="title 입력"/>
+	
+	<!-- 포로퍼티 설정 끝-->
+	<body id="body" style="
     margin-top: 0px;
     margin-right: 0px;
     margin-left: 0px;
