--- a/service4.html
+++ b/service4.html
@@ -19,6 +19,16 @@
 	<meta property="og:title"content="title 입력"/>
 	
 	<!-- 포로퍼티 설정 끝-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158029301-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158029301-1');
+</script>
+
 	<body id="body" style="
     margin-top: 0px;
     margin-right: 0px;
