--- a/service3.html
+++ b/service3.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>박진우의 홈</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158029301-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158029301-1');
+</script>
+
   </head>
   <body id="body"style="
     margin-top: 0px;
