--- a/service5.html
+++ b/service5.html
@@ -5,6 +5,16 @@
     <title>재미</title>
     <link rel="stylesheet" href="style.css">
     <style>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158029301-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158029301-1');
+</script>
+
     @media (max-width:1500px)
     {
       #media{
