--- a/service1.html
+++ b/service1.html
@@ -23,11 +23,11 @@
       <div id="login"><h4>로그인하기</h4></div>
       <h1><a href="project.html" style="text-decoration:none"style="text-color:black">우리가족의 웹사이트</a></h1>
     <div id="top">
-        <h2><a href="service1.html" style="text-color:black" >김선영</a></h2>
-        <h2><a href="service2.html" style="text-decoration:none"style="text-color:black" >박준호</a></h2>
-        <h2><a href="service3.html" style="text-decoration:none"style="text-color:black" >박진우</a></h2>
-        <h2><a href="service4.html" style="text-decoration:none"style="text-color:black" >박지원</a></h2>
-        <h2><a href="service5.html" style="text-decoration:none"style="text-color:black" ><strong>재미</strong>(beta)</a></h2>
+        <h2><a href="service1.html" style="color:black" >김선영</a></h2>
+        <h2><a href="service2.html" style="color:black" >박준호</a></h2>
+        <h2><a href="service3.html" style="color:black" >박진우</a></h2>
+        <h2><a href="service4.html" style="color:black" >박지원</a></h2>
+        <h2><a href="service5.html" style="color:black" ><strong>재미</strong>(beta)</a></h2>
     </div>
     <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
 
