--- a/service2.html
+++ b/service2.html
@@ -20,17 +20,8 @@
     margin-right: 0px;
     margin-left: 0px;
     margin-bottom: 0px;">
-      <div id="login"><h4>로그인하기</h4></div>
-
-      <h1><a href="project.html" style="text-decoration:none"style="text-color:black">우리가족의 웹사이트</a></h1>
-    <div id="top">
-        <h2><a href="service1.html" style="text-decoration:none"style="text-color:black" >김선영</a></h2>
-        <h2><a href="service2.html" style="text-color:black" >박준호</a></h2>
-        <h2><a href="service3.html" style="text-decoration:none"style="text-color:black" >박진우</a></h2>
-        <h2><a href="service4.html" style="text-decoration:none"style="text-color:black" >박지원</a></h2>
-        <h2><a href="service5.html" style="text-decoration:none"style="text-color:black" ><strong>재미</strong>(beta)</a></h2>
-    </div>
-    <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
+	  <div id="login"><h4>로그인하기</h4></div>
+	  <h3> 주간 Day 모드켜기/야간 Night 모드켜기</h3>
 
     <h3>
       <input type="button" value="야간모드 Night" style="width:435px;height:25px;text-align:center;font-size:15px;background-color:white;color:black" onclick="
@@ -48,6 +39,16 @@
        this.style = 'width:435px;height:25px;text-align:center;font-size:15px;background-color: white ; color: black'
      }">
    </h3>
+
+      <h1><a href="project.html" style="text-decoration:none"style="text-color:black">우리가족의 웹사이트</a></h1>
+    <div id="top">
+        <h2><a href="service1.html" style="color:black" >김선영</a></h2>
+        <h2><a href="service2.html" style="color:black" >박준호</a></h2>
+        <h2><a href="service3.html" style="color:black" >박진우</a></h2>
+        <h2><a href="service4.html" style="color:black" >박지원</a></h2>
+        <h2><a href="service5.html" style="color:black" ><strong>재미</strong>(beta)</a></h2>
+    </div>
+    
     <!--<h3>안녕하세요,<br>
       이곳은 새로운 프로젝트를 시작하는 웹페이지 입니다.</h3>
     <img src="projecting.jpg"width="100%" >-->
