--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html id="nobadak">
+<!--<img src="임시폐쇄 조치 안내_1.jpg"width=100%" >-->
   <head>
     <meta charset="utf-8">
     <title>Family-Home</title>
@@ -22,7 +23,7 @@
 </script>
 
   </head>
-
+<!--<img src="임시폐쇄 조치 안내_1.jpg"width=100%" >-->
 
   <body id="body"style="
     margin-top: 0px;
@@ -61,7 +62,7 @@
      }">
     </h3>
     <!-- pop up 창 띄우기-->
-    <!--<body onload="window.open('popup.html','','width=400px, height=570px, left=10px, top=10px, toolbar=0, status=yes, menubars=0, scrollbars=0, resizable=0, location=0, directories=0')">
+  <!--  <body onload="window.open('임시폐쇄 조치 안내_1.jpg','','width=1260px, height=891px, left=10px, top=10px, toolbar=0, status=yes, menubars=0, scrollbars=0, resizable=0, location=0, directories=0')">
 -->
   <h3>
       안녕하세요,<br>
