--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <!--<img src="임시폐쇄 조치 안내_1.jpg"width=100%" >-->
   <head>
     <meta charset="utf-8">
-    <title>Family-Home</title>
+    <title>우리가족-홈</title>
     <link rel="stylesheet" href="style.css">
     <style >
       @media query(max-width:800px) {
@@ -23,7 +23,6 @@
 </script>
 
   </head>
-<!--<img src="임시폐쇄 조치 안내_1.jpg"width=100%" >-->
 
   <body id="body"style="
     margin-top: 0px;
@@ -31,7 +30,8 @@
     margin-left: 0px;
     margin-bottom: 0px;">
     <div class="topmenu">
-
+<img src="임시폐쇄 조치 안내_1.jpg"width=100%" >
+<!--
     </div>
       <div id="login"><h4>로그인하기</h4></div>
       <h1><a href="project.html" style="text-decoration:none"style="color:black">우리가족의 웹사이트</a></h1>
@@ -127,6 +127,6 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- 시티 설치 코드 끝 -->
     <link  rel="license" href="bottom.html">
 
-
+-->
   </body>
 </html>
