--- a/project.html
+++ b/project.html
@@ -30,8 +30,8 @@
     margin-left: 0px;
     margin-bottom: 0px;">
     <div class="topmenu">
-<img src="임시폐쇄 조치 안내_1.jpg"width=80%" >
-<!--
+<!--<img src="임시폐쇄 조치 안내_1.jpg"width=80%" >-->
+
     </div>
       <div id="login"><h4>로그인하기</h4></div>
       <h1><a href="project.html" style="text-decoration:none"style="color:black">우리가족의 웹사이트</a></h1>
@@ -127,6 +127,6 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- 시티 설치 코드 끝 -->
     <link  rel="license" href="bottom.html">
 
--->
+
   </body>
 </html>
